Revision history for Dist-Zilla-PluginBundle-Author-AJNN

0.08  2024-11-25

 - Fix the time zone used for the git tag

0.07  2024-04-15

 - Add git contributors to meta and pod
 - Use an HTTP link instead of an SMTP address in the pod author section
 - Add readme support for main modules with separate .pod files
 - Use Leftovers instead of Generic in PodWeaver

0.06  2023-11-14

 - Put OVERVIEW before SYNOPSIS in pod
 - Update metacpan link in readme

0.05  2023-01-04

 - Fix PruneAliases test failure

0.04  2023-01-01

 - Fix broken logic for -remove attribute
 - Add MetaNoIndex plugin if t/lib is present
 - Remove Dist::Zilla::PluginBundle::Author::AJNN::PruneAliases

0.03  2022-07-03

 - Deprecate Dist::Zilla::PluginBundle::Author::AJNN::PruneAliases
 - Add -remove attribute (workaround for Dist::Zilla RT 81958)
 - Remove readme attribute
 - Add cpan_release attribute
 - Add GatherDir.exclude_match attribute
 - Exclude dist.ini from gathered files
 - Require a Software::License version that supports spdx_expression

0.02  2022-03-06

 - Fix PruneAliases test failure on non-Mac systems
 - Add cpanfile to repository to aid bootstrapping

0.01  2022-03-03

 - initial release