@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.031
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.032
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Dist::Zilla" => "0";
