@@ -4,9 +4,9 @@ main_module = lib/Dist/Zilla/PluginBundle/Author/AJNN.pm
 author  = Arne Johannessen <ajnn@cpan.org>
 license = CC0_1_0
 copyright_holder = Arne Johannessen
-copyright_year   = 2022-2023
+copyright_year   = 2022-2024
 
-version = 0.07
+version = 0.08
 release_status = stable
 
 [Bootstrap::lib]
@@ -18,7 +18,7 @@ Test::MinimumVersion.max_target_perl = v5.26
 
 [AutoPrereqs]
 ; don't mention modules that are in core
-skip = ^lib$|^strict$|^warnings$
+skip = ^(lib|strict|version|warnings)$
 skip = ^Carp$|^List::Util$
 
 ; AutoPrereqs doesn't pick up plugins referenced by this bundle
